# smppgw

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  apt-requirements.txt
configs/: config.json
documents/: Redis-Installation.docx  SMPPGateway-Configuration.docx  SMPPGateway-Installation.docx
libs/: CMakeLists.txt
libs/pinex/: CMakeLists.txt  common.hpp  io.hpp  net.hpp  p_client.hpp  p_client_list.hpp  p_server.hpp  pdu.hpp  pinex.hpp
libs/pinex/net/: client.hpp  server.hpp  session.hpp
libs/pinex/pdu/: bind_request.hpp  bind_response.hpp  stream_request.hpp  stream_response.hpp
libs/pinex_/: pdu.hpp
libs/pinex_/io/: expirator.hpp
libs/pinex_/net/: definitions.hpp  session.hpp
libs/pinex_/net/detail/: flat_buffer.hpp
libs/pinex_/pdu/: bind_request.hpp  bind_response.hpp  stream_request.hpp  stream_response.hpp
libs/smpp/: common.hpp  net.hpp  param.hpp  pdu.hpp  smpp.hpp  utility.hpp
libs/smpp/common/: bind_type.hpp  command_status.hpp  serialization.hpp
libs/smpp/net/: client.hpp  server.hpp  session.hpp
libs/smpp/param/: data_coding.hpp  esm_class.hpp  interface_version.hpp  npi.hpp  oparam.hpp  replace_if_present_flag.hpp  ton.hpp
libs/smpp/pdu/: alert_notification.hpp  bind_request.hpp  bind_resp.hpp  cancel_sm.hpp  cancel_sm_resp.hpp  data_sm.hpp  data_sm_resp.hpp  deliver_sm.hpp  deliver_sm_resp.hpp  generic_nack.hpp  query_sm.hpp  query_sm_resp.hpp  replace_sm.hpp  replace_sm_resp.hpp  submit_sm.hpp  submit_sm_resp.hpp
libs/smpp/utility/: address.hpp  data_coding_unicode.hpp  short_message.hpp
libs/smpp_/: CMakeLists.txt  param.hpp  pdu.hpp  utility.hpp
libs/smpp_/common/: command_id.hpp  version.hpp
libs/smpp_/net/detail/: flat_buffer.hpp
libs/smpp_/param/: message_state.hpp  oparam.hpp  oparam_tag.hpp  priority_flag.hpp  registered_delivery.hpp
libs/smpp_/pdu/: bind_resp.hpp  cancel_sm.hpp  query_sm.hpp  replace_sm.hpp  replace_sm_resp.hpp  submit_sm.hpp
libs/smpp_/utility/: data_coding_unicode.hpp  short_message.hpp  time_decoder.hpp  unicode_converter.hpp
protobuf/PAPER/: command.proto  cra.proto  firewall.proto  lif_engine.proto
protobuf/POLAR/: PacketStream.proto
protobuf/SMSC/MessageTracer/: MessageTracer.proto
protobuf/SMSC/Packets/: Definition.proto  README.md
protobuf/SMSC/Packets/GSM/: AlertSc.proto  RSDS.proto  SRIForSm.proto  SmsDeliver.proto  SmsSubmit.proto  StatusReport.proto  ati.proto  psi.proto  psl.proto
protobuf/SMSC/Packets/SMPP/: DeliverSm.proto  DeliveryReport.proto  SubmitSm.proto
scripts/: check_code_quality.bash  formatter.bash  sgwd
src/: CMakeLists.txt  main.cpp  schema.hpp  sgw_definitions.h  smpp_gateway.cpp  smpp_gateway.h
src/libs/: expirator.hpp  flow_control.hpp  logging.hpp  monitoring.hpp  segmented_logger.hpp
src/logging/: message_tracer.cpp  message_tracer.h  sgw_logger.cpp  sgw_logger.h
src/paper/: paper_client.cpp  paper_client.h
src/pinex/: pinex.cpp  pinex.h
src/routing/pinex/: route_mapper.h  router.cpp  router.h  routing_list.cpp  routing_list.h
src/routing/smpp/: bit_set.cpp  bit_set.h  prefix_rule_matcher.cpp  prefix_rule_matcher.h  routing_matcher.cpp  routing_matcher.h  trie_matcher.cpp  trie_matcher.h
src/smpp/: deliver_sm.cpp  deliver_sm.h  delivery_report.cpp  delivery_report.h  sgw_external_client.cpp  sgw_external_client.h  sgw_server.cpp  sgw_server.h  submit_sm.cpp  submit_sm.h
